--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,5 +2,15 @@
 @import url("./base.css");
 
 /* Sections style */
+@import url("./scroll-bar.css");
 @import url("./header.css");
+@import url("./mobile-menu.css");
+@import url("./hero.css");
+@import url("./about-me.css");
+@import url("./benefits.css");
+@import url("./projects.css");
+@import url("./faq.css");
+@import url("./covers.css");
+@import url("./reviews.css");
 @import url("./footer.css");
+@import url("./scroll-up.css");
