--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,11 +6,14 @@
 @import url("./header.css");
 @import url("./mobile-menu.css");
 @import url("./hero.css");
+@import url("../../node_modules/accordion-js/dist/accordion.min.css");
+@import url("../../node_modules/swiper/swiper-bundle.min.css");
 @import url("./about-me.css");
 @import url("./benefits.css");
 @import url("./projects.css");
 @import url("./faq.css");
 @import url("./covers.css");
 @import url("./reviews.css");
+@import url("../../node_modules/izitoast/dist/css/iziToast.min.css");
 @import url("./footer.css");
 @import url("./scroll-up.css");
