--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -1,5 +1,6 @@
 <section class="section" id="about-me">
   <div class="container">
+    <h2 class="h2-title visually-hidden">about-me</h2>
     <ul class="accordion-container about-accordion-container">
       <li class="ac about-ac">
         <div class="ac-header about-ac-header">
