--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -9,16 +9,13 @@
   margin-top: 0;
 }
 .about-ac + .about-ac {
-  margin-top: 20px;
+  padding-top: 32px;
 }
 .arrow-down {
   transition: transform 0.6s ease;
 }
-.about-ac.is-active .arrow-down {
-  transform: rotate(180deg);
-}
 .about-ac-header {
-  height: 40px;
+  min-height: 40px;
   position: relative;
 }
 .ac-trigger.about-ac-trigger {
@@ -48,6 +45,12 @@
 .arrow-down {
   stroke: #fafafa;
 }
+.about-ac.is-active .arrow-down {
+  transform: rotate(180deg);
+}
+.about-ac.is-active .about-ac-panel {
+  margin-top: 16px;
+}
 .about-ac-text {
   line-height: 24px; /* 150% */
   color: #fafafa !important;
@@ -57,32 +60,16 @@
 .about-ac-text:last-child {
   margin-bottom: 0 !important;
 }
-.margin-text {
+.about-ac-text.margin-text {
   margin-bottom: 10px !important;
-}
-
-::-webkit-scrollbar {
-  width: 15px;
-  background-color: #33383a;
-  background-color: rgba(250, 250, 250, 0.4);
-  border-radius: 15px;
-}
-::-webkit-scrollbar-thumb {
-  background: linear-gradient(90deg, #001958 22.71%, #0041e8 99.91%);
-  height: 200px;
-  border-radius: 15px;
-  border: 3px solid rgb(117 117 119);
-}
-::-webkit-scrollbar-thumb:hover {
-  cursor: pointer;
 }
 
 @media only screen and (min-width: 768px) {
   .about-accordion-container {
     margin-bottom: 64px;
   }
-  .about-ac + .about-ac {
-    margin-top: 32px;
+  .about-ac-text {
+    margin-bottom: 16px !important;
   }
 }
 
@@ -92,6 +79,6 @@
   }
   .about-ac-text {
     max-width: 612px;
-    margin: 0 0 32px auto !important;
+    margin-bottom: 32px !important;
   }
 }
