--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -18,9 +18,13 @@
   min-height: 40px;
   position: relative;
 }
+.ac.about-ac .ac-trigger.about-ac-trigger {
+  font:
+    600 16px / 24px "Inter Tight",
+    sans-serif;
+}
 .ac-trigger.about-ac-trigger {
-  font-weight: 600;
-  line-height: 24px;
+  letter-spacing: -0.32px;
   text-transform: uppercase;
   color: rgba(250, 250, 250, 0.4);
   padding: 0;
@@ -51,8 +55,13 @@
 .about-ac.is-active .about-ac-panel {
   margin-top: 16px;
 }
+.ac.about-ac .ac-panel.about-ac-panel .ac-text.about-ac-text {
+  font:
+    500 16px / 24px "Inter Tight",
+    sans-serif;
+}
 .about-ac-text {
-  line-height: 24px; /* 150% */
+  letter-spacing: -0.32px;
   color: #fafafa !important;
   padding: 0 !important;
   margin-bottom: 32px !important;
@@ -82,6 +91,6 @@
   }
   .about-ac-text {
     max-width: 612px;
-    margin-bottom: 32px !important;
+    margin: 0 68px 32px auto !important;
   }
 }
